fix overflow problem

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,8 +15,23 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
 
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
-  line-height: 1; }
+  line-height: 1; 
+  height: 100%;
+  width: 100%;
+  *zoom: 1; }
+body:before, body:after {
+  content: "";
+  display: table; }
+body:after {
+  clear: both; }
+
 
 ol, ul {
   list-style: none; }
@@ -36,29 +51,15 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-body {
-  height: 100%;
-  width: 100%;
-  *zoom: 1; }
-  body:before, body:after {
-    content: "";
-    display: table; }
-  body:after {
-    clear: both; }
 
-html, body {
-  height: 100%; }
 
-html {
-  height: 100%;
-  max-height: 100%; }
 
 body {
   font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   font-size: 1em;
   color: #666666;
   -webkit-font-smoothing: antialiased;
-  overflow: scroll; }
+  }
 
 ::selection {
   background: #98c2e8; }
@@ -174,7 +175,7 @@ pre {
   font-size: .9em;
   font-weight: normal;
   line-height: 1.3em;
-  overflow: scroll; }
+  overflow: auto; }
   pre code {
     padding: 0;
     background: none;
@@ -272,8 +273,10 @@ tbody td {
 .content-wrapper {
   z-index: 800;
   box-sizing:border-box;
+  height: 100%;
   width: 75%;
   float: right; 
+  overflow: auto;
   /* padding: 40px 70px; */
   
 }
@@ -283,6 +286,7 @@ tbody td {
 .page-card,
 .footer {
   margin: 40px 70px;
+  // overflow: auto;
 }
 
 .footer {
